# decaf-compiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DockerFile  README.md
.github/workflows/: docker-image.yml  format_test.yml  unit_test.yml
add_lib/: CMakeLists.txt  add.cpp  add.h
apis/: CMakeLists.txt  serializable.h  visual_decaf.cpp  visual_decaf.h
apis/debug_vm/: CMakeLists.txt  debug_vm.cpp  debug_vm.h
apis/debug_vm/exe_result/: CMakeLists.txt  exe_result.cpp  exe_result.h
apis/debug_vm/step/: CMakeLists.txt  step.cpp  step.h
apis/stream_scanner/: CMakeLists.txt  stream_scanner.cpp  stream_scanner.h
ast/: CMakeLists.txt  expr.cpp  expr.h  stmt.cpp  stmt.h
basic/: CMakeLists.txt  ast_basic.h  parser_basic.h
byte_code/: CMakeLists.txt  byte_code.cpp  byte_code.h  byte_code_driver.cpp  byte_code_driver.h  byte_code_separate.cpp  byte_code_separate.h  byte_code_visitor.cpp  byte_code_visitor.h
byte_code/disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.h
cli/: CMakeLists.txt  decaf.cpp
compiler/: CMakeLists.txt  compiler.cpp  compiler.h  program.h
deasm/: CMakeLists.txt  deassembler.cpp  deassembler.h
disassembler/: CMakeLists.txt  disassembler.cpp
factorial_lib/: CMakeLists.txt  factorial.cpp  factorial.h
json/: token_stream.json
json/ast/: ArithmeticBinary_schema.json  Expr.json  Expr_schema.json  Group_schema.json  IntConstant.json  IntConstant_schema.json
json/token/: token.json  token_schema.json  token_stream.json  token_stream_schema.json
meta/: version.h.in
parser/: CMakeLists.txt  parser.cpp  parser.h  parser_impl.yy
program/: CMakeLists.txt  constant_pool.cpp  constant_pool.h  program.cpp  program.h
runtime/: CMakeLists.txt
runtime/stack/: CMakeLists.txt  stack.cpp  stack.h
runtime/stack_item/: CMakeLists.txt  bool_stack_item.cpp  bool_stack_item.h  float_stack_item.cpp  float_stack_item.h  int_stack_item.cpp  int_stack_item.h  lvalue_stack_item.cpp  lvalue_stack_item.h  stack_item.cpp  stack_item.h  stack_items.h  string_stack_item.cpp  string_stack_item.h
runtime/symbol_table/: CMakeLists.txt  symbol_table.cpp  symbol_table.h
scanner/: CMakeLists.txt  scanner.cpp  scanner.h  scanner_impl.l
sub_lib/: CMakeLists.txt  sub.h
tests/: CMakeLists.txt  decaf_source.decaf  simple_driver.cpp  test_add.cpp
tests/ast/: CMakeLists.txt  ast_test.cpp
tests/byte_code/: CMakeLists.txt  byte_code_test.cpp
tests/compiler/: CMakeLists.txt  compiler_test.cpp
tests/deasm/: CMakeLists.txt  deasm_test.cpp
tests/debug_vm/: CMakeLists.txt  debug_vm_test.cpp
tests/disassembler/: CMakeLists.txt  disassembler_test.cpp
tests/parser/: CMakeLists.txt  parser_test.cpp
tests/program/: CMakeLists.txt  program_test.cpp
tests/scanner/: CMakeLists.txt  scanner_test.cpp
tests/stack_item/: CMakeLists.txt  stack_item_test.cpp
tests/symbol_table/: CMakeLists.txt  symbol_table_test.cpp
tests/token/: CMakeLists.txt  token_test.cpp
tests/type/: CMakeLists.txt  type_test.cpp
tests/vm/: CMakeLists.txt  vm_test.cpp
token/: CMakeLists.txt  token.cpp  token.h  token_stream.cpp  token_stream.h
type/: CMakeLists.txt  type.cpp  type.h
vm/: CMakeLists.txt  vm.cpp  vm.h
